RESOLVED FIXED101287
[BlackBerry] Do not show error page for main loads denied by client application
https://bugs.webkit.org/show_bug.cgi?id=101287
Summary [BlackBerry] Do not show error page for main loads denied by client application
Lyon Chen
Reported 2012-11-05 18:29:39 PST
If a main load is denied by webkit client application, we should not display an error page for it.
Attachments
patch for 101287 (1.78 KB, patch)
2012-11-05 18:40 PST, Lyon Chen
no flags
Lyon Chen
Comment 1 2012-11-05 18:40:07 PST
+Yong, Rob, Joe, Leo.
Lyon Chen
Comment 2 2012-11-05 18:40:49 PST
Created attachment 172464 [details] patch for 101287
WebKit Review Bot
Comment 3 2012-11-05 20:08:48 PST
Comment on attachment 172464 [details] patch for 101287 Clearing flags on attachment: 172464 Committed r133555: <http://trac.webkit.org/changeset/133555>
WebKit Review Bot
Comment 4 2012-11-05 20:08:51 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.