[BlackBerry] Do not show error page for main loads denied by client application https://bugs.webkit.org/show_bug.cgi?id=101287

Internal PR: 237574.
Internally reviewed by Arvid Nilsson, Joe Mason.
Patch by Lianghui Chen <liachen@rim.com> on 2012-11-05
Reviewed by George Staikos.

* WebCoreSupport/FrameLoaderClientBlackBerry.cpp:
(WebCore::FrameLoaderClientBlackBerry::dispatchDidFailProvisionalLoad):

Canonical link: https://commits.webkit.org/119373@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@133555 268f45cc-cd09-0410-ab3c-d52691b4dbfc